[CSS] Fix wrong color on cold staking top menu

--- a/src/qt/cari/res/css/style_light.css
+++ b/src/qt/cari/res/css/style_light.css
@@ -544,7 +544,7 @@ QPushButton[cssClass="btn-check-cold-staking"] {
     qproperty-iconSize: 24px 24px;
     color:#ffffff;
     background-color:#504f7d4b;
-    border-bottom:2px solid #4f7d4b;
+    border-bottom:2px solid #91ff87;
     border-radius:2px;
 }
 
